# dji-logbook

./: LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs  models.rs  parser.rs
src/components/charts/: TelemetryCharts.tsx
src/components/dashboard/: Dashboard.tsx  FlightImporter.tsx  FlightList.tsx  FlightStats.tsx  Overview.tsx  SettingsModal.tsx
src/components/map/: FlightMap.tsx
src/lib/: utils.ts
src/stores/: flightStore.ts
src/types/: index.ts
